DCS-14499 Making repo deployable